--- a/frontend/src/components/ModuleContent/ModuleContent.css
+++ b/frontend/src/components/ModuleContent/ModuleContent.css
@@ -1,16 +1,66 @@
 .moduleContent::-webkit-scrollbar {
- width: 10px;
- height: 10px;
+    width: 10px;
+    height: 10px;
 }
+
 .moduleContent::-webkit-scrollbar-thumb {
- background: linear-gradient(13deg, #d6c8d9 14%,#8592e6 56%);
- border-radius: 10px;
+    background: linear-gradient(13deg, #d6c8d9 14%, #8592e6 56%);
+    border-radius: 10px;
 }
-.moduleContent::-webkit-scrollbar-thumb:hover{
- background: linear-gradient(13deg, #c7ceff 14%,#f9d4ff 64%);
+
+.moduleContent::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
 }
-.moduleContent::-webkit-scrollbar-track{
- background: #ffffff;
- border-radius: 10px;
- box-shadow: inset 7px 10px 12px #f0f0f0;
+
+.moduleContent::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: inset 7px 10px 12px #f0f0f0;
+}
+
+.moduleContent-background {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    background: linear-gradient(to bottom, rgb(54, 69, 136) 0%, rgb(111, 118, 181) 40%, rgb(160, 171, 210) 60%, rgb(218, 216, 234) 80%, rgb(254, 254, 255) 100%);
+}
+
+.moduleContent-no-overflow-parent {
+    width: 100%;
+    margin: 15px;
+    box-sizing: border-box;
+    height: 75%;
+    border-radius: 12px;
+    background-color: white;
+}
+
+.moduleContent {
+    width: 100%;
+    box-sizing: border-box;
+    height: 100%;
+    overflow-y: scroll;
+    border-radius: 12px;
+    background-color: white;
+}
+
+.no-lessons {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.moduleContent-title {
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.moduleContent-test-completed {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: green
 }
