--- a/frontend/src/components/ModulesList/ModulesList.css
+++ b/frontend/src/components/ModulesList/ModulesList.css
@@ -1,16 +1,34 @@
 .modules-list::-webkit-scrollbar {
- width: 10px;
- height: 10px;
+    width: 10px;
+    height: 10px;
 }
+
 .modules-list::-webkit-scrollbar-thumb {
- background: linear-gradient(13deg, #d6c8d9 14%,#8592e6 56%);
- border-radius: 10px;
+    background: linear-gradient(13deg, #d6c8d9 14%, #8592e6 56%);
+    border-radius: 10px;
 }
-.modules-list::-webkit-scrollbar-thumb:hover{
- background: linear-gradient(13deg, #c7ceff 14%,#f9d4ff 64%);
+
+.modules-list::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
 }
-.modules-list::-webkit-scrollbar-track{
- background: #ffffff;
- border-radius: 10px;
- box-shadow: inset 7px 10px 12px #f0f0f0;
+
+.modules-list::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: inset 7px 10px 12px #f0f0f0;
+}
+
+.modules-list {
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+.list-modules-title {
+    text-align: center;
+    padding-top: 12px;
+}
+
+.list-modules-lesson-item {
+    padding-top: 10px;
+    cursor: pointer;
 }
