--- a/frontend/src/components/UserProfile/UserProfile.css
+++ b/frontend/src/components/UserProfile/UserProfile.css
@@ -1,16 +1,44 @@
 .user-profile::-webkit-scrollbar {
- width: 10px;
- height: 10px;
+    width: 10px;
+    height: 10px;
 }
+
 .user-profile::-webkit-scrollbar-thumb {
- background: linear-gradient(13deg, #d6c8d9 14%,#8592e6 56%);
- border-radius: 10px;
+    background: linear-gradient(13deg, #d6c8d9 14%, #8592e6 56%);
+    border-radius: 10px;
 }
-.user-profile::-webkit-scrollbar-thumb:hover{
- background: linear-gradient(13deg, #c7ceff 14%,#f9d4ff 64%);
+
+.user-profile::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
 }
-.user-profile::-webkit-scrollbar-track{
- background: #ffffff;
- border-radius: 10px;
- box-shadow: inset 7px 10px 12px #f0f0f0;
+
+.user-profile::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: inset 7px 10px 12px #f0f0f0;
+}
+
+.user-profile {
+    height: 100vh;
+    overflow-y: scroll;
+}
+
+.user-profile-exit-container {
+    padding: 12px 10px 0;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.user-profile-name-container {
+    padding: 0 10px;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: center;
+    color: #007bff;
+}
+
+.user-profile-module-title {
+    padding: 0 10px;
+    font-weight: bold;
+    text-align: center;
 }
