--- a/frontend/src/panels/Auth/Auth.css
+++ b/frontend/src/panels/Auth/Auth.css
@@ -19,3 +19,29 @@
     border-radius: 10px;
     background-color: white;
 }
+
+@media (max-width: 770px) {
+    .auth-login-registration-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        box-sizing: border-box;
+    }
+
+    .auth-login-registration-right-part {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center
+    }
+
+    .auth-login-registration-form {
+        width: 100%;
+        padding: 22px;
+        margin: 12px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        background-color: white;
+    }
+}
