--- a/frontend/src/components/ModuleContent/ModuleContent.css
+++ b/frontend/src/components/ModuleContent/ModuleContent.css
@@ -38,6 +38,8 @@
 
 .moduleContent {
     width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     height: 100%;
     overflow-y: scroll;
@@ -70,6 +72,13 @@
     width: 400px;
 }
 
+.moduleContent-content {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 12px;
+}
+
 @media (max-width: 770px) {
     .moduleContent-background {
         padding-top: 20px;
@@ -78,6 +87,19 @@
     .moduleContent-no-overflow-parent {
         height: 85%;
     }
+
+    .moduleContent::-webkit-scrollbar {
+        width: 2px;
+        height: 10px;
+    }
+
+    .moduleContent-content {
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        padding: 5px;
+    }
+
 }
 
 @media (max-width: 460px) {
