--- a/frontend/src/components/DocumentationContent/DocumentationContent.css
+++ b/frontend/src/components/DocumentationContent/DocumentationContent.css
@@ -2,6 +2,7 @@
     text-align: center;
     padding: 12px;
 }
-.file-container a {
+.doc-file a {
     color: black;
+    text-decoration: underline;
 }
