--- a/frontend/src/components/ModuleContent/ModuleContent.css
+++ b/frontend/src/components/ModuleContent/ModuleContent.css
@@ -17,11 +17,20 @@
     border-radius: 10px;
     box-shadow: inset 7px 10px 12px #f0f0f0;
 }
-
+.info {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+    width: 100%;
+    box-sizing: border-box;
+}
 .moduleContent-background {
     height: 100vh;
     width: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
     box-sizing: border-box;
     background: linear-gradient(to bottom, rgb(54, 69, 136) 0%, rgb(111, 118, 181) 40%, rgb(160, 171, 210) 60%, rgb(218, 216, 234) 80%, rgb(254, 254, 255) 100%);
@@ -85,6 +94,7 @@
     }
 
     .moduleContent-no-overflow-parent {
+        width: 95%;
         height: 85%;
         margin: 5px;
     }
@@ -106,5 +116,11 @@
 @media (max-width: 460px) {
     .lesson-video {
         width: 320px;
+    }
+}
+
+@media (max-width: 340px) {
+    .lesson-video {
+        width: 260px;
     }
 }
