--- a/frontend/src/components/ModuleContent/ModuleContent.css
+++ b/frontend/src/components/ModuleContent/ModuleContent.css
@@ -22,6 +22,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
+    position: relative;
     align-items: center;
     box-sizing: border-box;
     background: linear-gradient(to bottom, rgb(54, 69, 136) 0%, rgb(111, 118, 181) 40%, rgb(160, 171, 210) 60%, rgb(218, 216, 234) 80%, rgb(254, 254, 255) 100%);
@@ -39,6 +40,7 @@
 .moduleContent-no-overflow-parent {
     width: 100%;
     margin: 15px;
+    position: relative;
     box-sizing: border-box;
     height: 75%;
     border-radius: 12px;
@@ -88,6 +90,29 @@
     padding: 12px;
 }
 
+.float-button-add-calendar {
+    position: absolute;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background: green;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 1;
+}
+
+@media (min-width: 770px) {
+    .float-button-add-calendar {
+        top: -50px;
+        right: 0
+    }
+}
+
 @media (max-width: 770px) {
     .moduleContent-background {
         padding-top: 20px;
@@ -110,6 +135,10 @@
         padding: 5px;
     }
 
+    .float-button-add-calendar {
+        bottom: -20px;
+        right: 0
+    }
 }
 
 @media (max-width: 460px) {
