--- a/frontend/src/components/BotContent/BotContent.css
+++ b/frontend/src/components/BotContent/BotContent.css
@@ -17,3 +17,7 @@
     border-radius: 10px;
     box-shadow: inset 7px 10px 12px #f0f0f0;
 }
+.themes-container form {
+    width: 100%;
+    min-width: 100%;
+}
