customized bot messages on desktop

--- a/frontend/src/components/BotContent/BotContent.css
+++ b/frontend/src/components/BotContent/BotContent.css
@@ -17,7 +17,22 @@
     border-radius: 10px;
     box-shadow: inset 7px 10px 12px #f0f0f0;
 }
+
 .themes-container form {
     width: 100%;
     min-width: 100%;
+}
+
+.bot-message {
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    max-width: 60%;
+}
+
+@media (max-width: 770px) {
+    .bot-message{
+        max-width: 85%;
+    }
 }
