some fixes in admin

--- a/templates/floor_editor.html
+++ b/templates/floor_editor.html
@@ -470,6 +470,13 @@
                     <input type="hidden" name="json_floor" id="json_floor">
                     {% csrf_token %}
                 </div>
+                <div class="form-group">
+                    <select class="form-control" name="building">
+                        {% for building in buildings %}
+                            <option value="{{ building.id }}">{{ building.address }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-success">Добавить</button>
                 </div>
