--- a/frontend/src/components/User/User.css
+++ b/frontend/src/components/User/User.css
@@ -6,7 +6,7 @@
     height: 100%;
     overflow-y: scroll;
     padding: 12px;
-    background-image: linear-gradient(#a0f1ea, #e8b0e3);
+    background-image: linear-gradient(#a0f1ea, #8c9cd4);
 }
 
 .user-content::-webkit-scrollbar {
