added group top view fixed bugs

--- a/frontend/src/components/ModulesList/ModulesList.css
+++ b/frontend/src/components/ModulesList/ModulesList.css
@@ -35,22 +35,30 @@
     cursor: pointer;
 }
 
-.card-header{
+.card-header {
     background-color: white;
 }
+
 .modules-card-content {
     padding-left: 40px;
     font-weight: bold;
 }
+
 @media (max-width: 1270px) {
-    .modules-card-content{
+    .modules-card-content-center {
         padding-left: 0;
         text-align: center;
     }
 }
+
 @media (max-width: 770px) {
     .modules-list::-webkit-scrollbar {
         width: 2px;
         height: 10px;
+    }
+
+    .modules-card-content {
+        padding-left: 0;
+        font-weight: bold;
     }
 }
