--- a/templates/floor_editor.html
+++ b/templates/floor_editor.html
@@ -549,6 +549,7 @@
 
       <div style="clear:both"></div>
   </div>
+<input id="viewer" type="hidden" value="false">
 </body>
   <script src="{% static 'floor_editor/jquery.min.js' %}"></script>
   <script src="{% static 'floor_editor/bootstrap.min.js' %}"></script>
