floor bug fixed

--- a/templates/floor_viewer.html
+++ b/templates/floor_viewer.html
@@ -625,7 +625,7 @@
     </div>
 </div>
 
-<div style="position:absolute;bottom:10px;left:10px;font-size:1.5em;color:#08d;display: none" id="boxinfo">
+<div style="position:absolute;bottom:10px;left:10px;font-size:1.5em;color:#08d" id="boxinfo">
 </div>
 
 <div id="moveBox"
@@ -666,7 +666,6 @@
 
     <div style="clear:both"></div>
 </div>
-<input id="viewer" type="hidden" value="true">
 </body>
 <script src="{% static 'floor_editor/jquery.min.js' %}"></script>
 <script src="{% static 'floor_editor/bootstrap.min.js' %}"></script>
@@ -674,17 +673,16 @@
 <script>
     const isOnlyView = true
 </script>
-<script src="{% static 'floor_editor/func.js' %}"></script>
 <script src="{% static 'floor_editor/qSVG.js' %}"></script>
 <script src="{% static 'floor_editor/editor.js' %}"></script>
-<script src="{% static 'floor_editor/engine.js' %}"></script>
+<script src="{% static 'floor_editor/func.js' %}"></script>
+<script src="{% static 'floor_editor/reader_engine.js' %}"></script>
 <script src="{% static 'floor_editor/additional_scripts.js' %}"></script>
 <script>
     const data = {{ json }};
     const json = JSON.parse(data);
     initHistory()
     load(0, false, false, json);
-    $('#boxwall').children('path').forEach(x => x.addEventListener('mousedown', null))
 
     document.getElementById('wallTools').innerHTML = "";
 </script>
