fixed mobile floor

--- a/templates/floor_editor.html
+++ b/templates/floor_editor.html
@@ -553,6 +553,10 @@
   <script src="{% static 'floor_editor/jquery.min.js' %}"></script>
   <script src="{% static 'floor_editor/bootstrap.min.js' %}"></script>
   <script src="{% static 'floor_editor/mousewheel.js' %}"></script>
+  <script src="{% static 'floor_editor/hammer.min.js' %}"></script>
+  <script>
+    const isOnlyView = false
+  </script>
   <script src="{% static 'floor_editor/func.js' %}"></script>
   <script src="{% static 'floor_editor/qSVG.js' %}"></script>
   <script src="{% static 'floor_editor/editor.js' %}"></script>
