--- a/templates/floor_viewer.html
+++ b/templates/floor_viewer.html
@@ -670,6 +670,7 @@
 <script src="{% static 'floor_editor/jquery.min.js' %}"></script>
 <script src="{% static 'floor_editor/bootstrap.min.js' %}"></script>
 <script src="{% static 'floor_editor/mousewheel.js' %}"></script>
+<script src="{% static 'floor_editor/hammer.min.js' %}"></script>
 <script>
     const isOnlyView = true
 </script>
