--- a/frontend/src/panels/General/General.css
+++ b/frontend/src/panels/General/General.css
@@ -15,6 +15,7 @@
     height: auto;
     padding: 9px 38px 9px 37px;
     color: #ffffff;
+    cursor: pointer;
     background-color: #30065a;
     border-radius: 50px;
     text-decoration: none;
