--- a/frontend/src/components/ModuleContent/ModuleContent.css
+++ b/frontend/src/components/ModuleContent/ModuleContent.css
@@ -89,7 +89,6 @@
 }
 
 .float-button-add-calendar {
-    position: absolute;
     display: flex;
     width: 40px;
     height: 40px;
@@ -103,12 +102,9 @@
     cursor: pointer;
     z-index: 1;
 }
-
-@media (min-width: 770px) {
-    .float-button-add-calendar {
-        top: 50px;
-        right: 50px;
-    }
+.rbc-calendar{
+    position: relative;
+    z-index: 2;
 }
 
 @media (max-width: 770px) {
@@ -126,11 +122,6 @@
         height: 100%;
         box-sizing: border-box;
         padding: 5px;
-    }
-
-    .float-button-add-calendar {
-        bottom: -20px;
-        right: 0
     }
 }
 
