--- a/frontend/src/components/User/User.css
+++ b/frontend/src/components/User/User.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
     height: 100%;
     overflow-y: scroll;
-    padding: 12px;
-    background-image: linear-gradient(#a0f1ea, #8c9cd4);
+    padding: 20px 40px;
+    background-color: white;
 }
 
 .user-content::-webkit-scrollbar {
@@ -28,7 +28,17 @@
     border-radius: 10px;
     box-shadow: inset 7px 10px 12px #f0f0f0;
 }
+.user-hello {
+    position: relative;
+    z-index: 2;
+    padding: 40px 12px 20px 12px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
+}
 .user-content-card {
     padding: 12px;
     box-sizing: border-box;
@@ -41,7 +51,6 @@
     margin: 12px;
     flex-grow: 1;
 }
-
 @media (max-width: 770px) {
     .user-content::-webkit-scrollbar {
         width: 2px;
@@ -49,6 +58,6 @@
     }
 
     .user-content {
-        padding-top: 57px;
+        padding: 57px 12px 0;
     }
 }
