--- a/frontend/src/components/Menu/Menu.css
+++ b/frontend/src/components/Menu/Menu.css
@@ -1,21 +1,21 @@
 .modules-list::-webkit-scrollbar {
-    width: 2px;
+    width: 0;
     height: 10px;
     background: transparent;
 }
 
 .modules-list::-webkit-scrollbar-thumb {
-    background: linear-gradient(13deg, #d6c8d9 14%, #8592e6 56%);
+    background: transparent;
     border-radius: 10px;
 }
 
 .modules-list::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
+    background: transparent;
 }
 
 .modules-list::-webkit-scrollbar-track {
     border-radius: 10px;
-    box-shadow: inset 7px 10px 12px #f0f0f0;
+    box-shadow: none;
     background: transparent;
 }
 .modules-list-none-overflow {
