--- a/frontend/src/panels/Main/Main.css
+++ b/frontend/src/panels/Main/Main.css
@@ -9,3 +9,9 @@
 .right-panel-container {
     width: 25%;
 }
+
+.mobile-nav-bar {
+    -webkit-box-shadow: 0px 8px 31px 0px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0px 8px 31px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 8px 31px 0px rgba(34, 60, 80, 0.2);
+}
