--- a/frontend/src/components/Menu/Menu.css
+++ b/frontend/src/components/Menu/Menu.css
@@ -62,6 +62,7 @@
     background-color: #DEF7FF;
     box-sizing: border-box;
     overflow-y: scroll;
+    padding-bottom: 40px;
 }
 
 .list-modules-title {
@@ -78,6 +79,8 @@
     cursor: pointer;
     background-color: inherit;
     border: none;
+    position: relative;
+    z-index: 2;
 }
 
 .modules-card-content {
