--- a/frontend/src/components/User/User.css
+++ b/frontend/src/components/User/User.css
@@ -10,23 +10,24 @@
 }
 
 .user-content::-webkit-scrollbar {
-    width: 10px;
+    width: 0;
     height: 10px;
+    background-color: transparent;
 }
 
 .user-content::-webkit-scrollbar-thumb {
-    background: linear-gradient(13deg, #d6c8d9 14%, #8592e6 56%);
+    background: transparent;
     border-radius: 10px;
 }
 
 .user-content::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(13deg, #c7ceff 14%, #f9d4ff 64%);
+    background: transparent;
 }
 
 .user-content::-webkit-scrollbar-track {
-    background: #ffffff;
+    background: transparent;
     border-radius: 10px;
-    box-shadow: inset 7px 10px 12px #f0f0f0;
+    box-shadow: none;
 }
 
 .user-hello {
@@ -60,10 +61,6 @@
 }
 
 @media (max-width: 770px) {
-    .user-content::-webkit-scrollbar {
-        width: 2px;
-        height: 10px;
-    }
 
     .user-content {
         padding: 57px 12px 0;
